--- a/resources/scss/_menu.scss
+++ b/resources/scss/_menu.scss
@@ -70,12 +70,12 @@
         display: grid;
         grid-template-columns: 1fr;
         // grid-auto-rows: 20rem;
-        gap: 4rem;
+        gap: 2.5rem;
     }
 
 
 }
-@media (min-width: 1200px) {
+@media (min-width: 760px) {
     .menu {
 
         display: flex;
