--- a/resources/scss/_style.scss
+++ b/resources/scss/_style.scss
@@ -154,3 +154,7 @@ footer {
 .w12px{
     width: 12px;
 }
+
+.zindex-10{
+    z-index: 10;
+}
